middleware/XMLParser.py
# Generated from XMLParser.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class XMLParser ( Parser ):

    grammarFileName = "XMLParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'<!DOCTYPE'", "'<'", "<INVALID>", 
                     "<INVALID>", "'<!ELEMENT'", "'<!ENTITY'", "<INVALID>", 
                     "'['", "']'", "'ANY'", "'SYSTEM'", "'EMPTY'", "'('", 
                     "')'", "'|'", "'%'", "';'", "'*'", "'#PCDATA'", "'PUBLIC'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'/>'", "'/'", "'='" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "CDATA", "EntityRef", "CharRef", 
                      "SEA_WS", "DOCTYPE", "OPEN", "XMLDeclOpen", "TEXT", 
                      "ELEMENT", "ENTITY", "GT", "LBRACK", "RBRACK", "ANY", 
                      "SYSTEM", "EMPTY", "LPAREN", "RPAREN", "PIPE", "PERCENT", 
                      "SEMI", "ASTERISK", "PCDATA", "PUBLIC", "DTDName", 
                      "DTDSTRING", "DTD_WS", "CLOSE", "SPECIAL_CLOSE", "SLASH_CLOSE", 
                      "SLASH", "EQUALS", "STRING", "Name", "S", "PI" ]

    RULE_document = 0
    RULE_prolog = 1
    RULE_doctypedecl = 2
    RULE_externalID = 3
    RULE_intSubset = 4
    RULE_peReference = 5
    RULE_markupdecl = 6
    RULE_elementdecl = 7
    RULE_contentSpec = 8
    RULE_mixed = 9
    RULE_nameList = 10
    RULE_entityDecl = 11
    RULE_content = 12
    RULE_element = 13
    RULE_reference = 14
    RULE_attribute = 15
    RULE_chardata = 16
    RULE_misc = 17

    ruleNames =  [ "document", "prolog", "doctypedecl", "externalID", "intSubset", 
                   "peReference", "markupdecl", "elementdecl", "contentSpec", 
                   "mixed", "nameList", "entityDecl", "content", "element", 
                   "reference", "attribute", "chardata", "misc" ]

    EOF = Token.EOF
    COMMENT=1
    CDATA=2
    EntityRef=3
    CharRef=4
    SEA_WS=5
    DOCTYPE=6
    OPEN=7
    XMLDeclOpen=8
    TEXT=9
    ELEMENT=10
    ENTITY=11
    GT=12
    LBRACK=13
    RBRACK=14
    ANY=15
    SYSTEM=16
    EMPTY=17
    LPAREN=18
    RPAREN=19
    PIPE=20
    PERCENT=21
    SEMI=22
    ASTERISK=23
    PCDATA=24
    PUBLIC=25
    DTDName=26
    DTDSTRING=27
    DTD_WS=28
    CLOSE=29
    SPECIAL_CLOSE=30
    SLASH_CLOSE=31
    SLASH=32
    EQUALS=33
    STRING=34
    Name=35
    S=36
    PI=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DocumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def element(self):
            return self.getTypedRuleContext(XMLParser.ElementContext,0)


        def EOF(self):
            return self.getToken(XMLParser.EOF, 0)

        def prolog(self):
            return self.getTypedRuleContext(XMLParser.PrologContext,0)


        def misc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.MiscContext)
            else:
                return self.getTypedRuleContext(XMLParser.MiscContext,i)


        def doctypedecl(self):
            return self.getTypedRuleContext(XMLParser.DoctypedeclContext,0)


        def getRuleIndex(self):
            return XMLParser.RULE_document

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocument" ):
                listener.enterDocument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocument" ):
                listener.exitDocument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDocument" ):
                return visitor.visitDocument(self)
            else:
                return visitor.visitChildren(self)




    def document(self):

        localctx = XMLParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 36
                self.prolog()


            self.state = 42
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 39
                    self.misc() 
                self.state = 44
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 45
                self.doctypedecl()


            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 137438953506) != 0):
                self.state = 48
                self.misc()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 54
            self.element()
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 137438953506) != 0):
                self.state = 55
                self.misc()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 61
            self.match(XMLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrologContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def XMLDeclOpen(self):
            return self.getToken(XMLParser.XMLDeclOpen, 0)

        def SPECIAL_CLOSE(self):
            return self.getToken(XMLParser.SPECIAL_CLOSE, 0)

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.AttributeContext)
            else:
                return self.getTypedRuleContext(XMLParser.AttributeContext,i)


        def getRuleIndex(self):
            return XMLParser.RULE_prolog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProlog" ):
                listener.enterProlog(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProlog" ):
                listener.exitProlog(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProlog" ):
                return visitor.visitProlog(self)
            else:
                return visitor.visitChildren(self)




    def prolog(self):

        localctx = XMLParser.PrologContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prolog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(XMLParser.XMLDeclOpen)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==35:
                self.state = 64
                self.attribute()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(XMLParser.SPECIAL_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoctypedeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOCTYPE(self):
            return self.getToken(XMLParser.DOCTYPE, 0)

        def DTDName(self):
            return self.getToken(XMLParser.DTDName, 0)

        def LBRACK(self):
            return self.getToken(XMLParser.LBRACK, 0)

        def intSubset(self):
            return self.getTypedRuleContext(XMLParser.IntSubsetContext,0)


        def RBRACK(self):
            return self.getToken(XMLParser.RBRACK, 0)

        def GT(self):
            return self.getToken(XMLParser.GT, 0)

        def DTD_WS(self, i:int=None):
            if i is None:
                return self.getTokens(XMLParser.DTD_WS)
            else:
                return self.getToken(XMLParser.DTD_WS, i)

        def externalID(self):
            return self.getTypedRuleContext(XMLParser.ExternalIDContext,0)


        def getRuleIndex(self):
            return XMLParser.RULE_doctypedecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoctypedecl" ):
                listener.enterDoctypedecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoctypedecl" ):
                listener.exitDoctypedecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoctypedecl" ):
                return visitor.visitDoctypedecl(self)
            else:
                return visitor.visitChildren(self)




    def doctypedecl(self):

        localctx = XMLParser.DoctypedeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_doctypedecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(XMLParser.DOCTYPE)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==28:
                self.state = 73
                self.match(XMLParser.DTD_WS)


            self.state = 76
            self.match(XMLParser.DTDName)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==28:
                self.state = 77
                self.match(XMLParser.DTD_WS)


            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16 or _la==25:
                self.state = 80
                self.externalID()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==28:
                    self.state = 81
                    self.match(XMLParser.DTD_WS)




            self.state = 86
            self.match(XMLParser.LBRACK)
            self.state = 87
            self.intSubset()
            self.state = 88
            self.match(XMLParser.RBRACK)
            self.state = 89
            self.match(XMLParser.GT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExternalIDContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SYSTEM(self):
            return self.getToken(XMLParser.SYSTEM, 0)

        def DTDSTRING(self):
            return self.getToken(XMLParser.DTDSTRING, 0)

        def DTD_WS(self, i:int=None):
            if i is None:
                return self.getTokens(XMLParser.DTD_WS)
            else:
                return self.getToken(XMLParser.DTD_WS, i)

        def PUBLIC(self):
            return self.getToken(XMLParser.PUBLIC, 0)

        def STRING(self):
            return self.getToken(XMLParser.STRING, 0)

        def getRuleIndex(self):
            return XMLParser.RULE_externalID

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExternalID" ):
                listener.enterExternalID(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExternalID" ):
                listener.exitExternalID(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExternalID" ):
                return visitor.visitExternalID(self)
            else:
                return visitor.visitChildren(self)




    def externalID(self):

        localctx = XMLParser.ExternalIDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_externalID)
        self._la = 0 # Token type
        try:
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.match(XMLParser.SYSTEM)
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==28:
                    self.state = 92
                    self.match(XMLParser.DTD_WS)


                self.state = 95
                self.match(XMLParser.DTDSTRING)
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.match(XMLParser.PUBLIC)
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==28:
                    self.state = 97
                    self.match(XMLParser.DTD_WS)


                self.state = 100
                self.match(XMLParser.DTDSTRING)
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==28:
                    self.state = 101
                    self.match(XMLParser.DTD_WS)


                self.state = 104
                self.match(XMLParser.STRING)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntSubsetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def markupdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.MarkupdeclContext)
            else:
                return self.getTypedRuleContext(XMLParser.MarkupdeclContext,i)


        def peReference(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.PeReferenceContext)
            else:
                return self.getTypedRuleContext(XMLParser.PeReferenceContext,i)


        def DTD_WS(self, i:int=None):
            if i is None:
                return self.getTokens(XMLParser.DTD_WS)
            else:
                return self.getToken(XMLParser.DTD_WS, i)

        def getRuleIndex(self):
            return XMLParser.RULE_intSubset

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntSubset" ):
                listener.enterIntSubset(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntSubset" ):
                listener.exitIntSubset(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntSubset" ):
                return visitor.visitIntSubset(self)
            else:
                return visitor.visitChildren(self)




    def intSubset(self):

        localctx = XMLParser.IntSubsetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_intSubset)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 270535680) != 0):
                self.state = 110
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [10, 11]:
                    self.state = 107
                    self.markupdecl()
                    pass
                elif token in [21]:
                    self.state = 108
                    self.peReference()
                    pass
                elif token in [28]:
                    self.state = 109
                    self.match(XMLParser.DTD_WS)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PeReferenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PERCENT(self):
            return self.getToken(XMLParser.PERCENT, 0)

        def DTDName(self):
            return self.getToken(XMLParser.DTDName, 0)

        def SEMI(self):
            return self.getToken(XMLParser.SEMI, 0)

        def getRuleIndex(self):
            return XMLParser.RULE_peReference

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPeReference" ):
                listener.enterPeReference(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPeReference" ):
                listener.exitPeReference(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPeReference" ):
                return visitor.visitPeReference(self)
            else:
                return visitor.visitChildren(self)




    def peReference(self):

        localctx = XMLParser.PeReferenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_peReference)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(XMLParser.PERCENT)
            self.state = 116
            self.match(XMLParser.DTDName)
            self.state = 117
            self.match(XMLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MarkupdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elementdecl(self):
            return self.getTypedRuleContext(XMLParser.ElementdeclContext,0)


        def entityDecl(self):
            return self.getTypedRuleContext(XMLParser.EntityDeclContext,0)


        def getRuleIndex(self):
            return XMLParser.RULE_markupdecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMarkupdecl" ):
                listener.enterMarkupdecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMarkupdecl" ):
                listener.exitMarkupdecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMarkupdecl" ):
                return visitor.visitMarkupdecl(self)
            else:
                return visitor.visitChildren(self)




    def markupdecl(self):

        localctx = XMLParser.MarkupdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_markupdecl)
        try:
            self.state = 121
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.elementdecl()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.entityDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELEMENT(self):
            return self.getToken(XMLParser.ELEMENT, 0)

        def DTDName(self):
            return self.getToken(XMLParser.DTDName, 0)

        def contentSpec(self):
            return self.getTypedRuleContext(XMLParser.ContentSpecContext,0)


        def GT(self):
            return self.getToken(XMLParser.GT, 0)

        def DTD_WS(self, i:int=None):
            if i is None:
                return self.getTokens(XMLParser.DTD_WS)
            else:
                return self.getToken(XMLParser.DTD_WS, i)

        def getRuleIndex(self):
            return XMLParser.RULE_elementdecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElementdecl" ):
                listener.enterElementdecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElementdecl" ):
                listener.exitElementdecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElementdecl" ):
                return visitor.visitElementdecl(self)
            else:
                return visitor.visitChildren(self)




    def elementdecl(self):

        localctx = XMLParser.ElementdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_elementdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(XMLParser.ELEMENT)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==28:
                self.state = 124
                self.match(XMLParser.DTD_WS)


            self.state = 127
            self.match(XMLParser.DTDName)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==28:
                self.state = 128
                self.match(XMLParser.DTD_WS)


            self.state = 131
            self.contentSpec()
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==28:
                self.state = 132
                self.match(XMLParser.DTD_WS)


            self.state = 135
            self.match(XMLParser.GT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContentSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EMPTY(self):
            return self.getToken(XMLParser.EMPTY, 0)

        def ANY(self):
            return self.getToken(XMLParser.ANY, 0)

        def mixed(self):
            return self.getTypedRuleContext(XMLParser.MixedContext,0)


        def getRuleIndex(self):
            return XMLParser.RULE_contentSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContentSpec" ):
                listener.enterContentSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContentSpec" ):
                listener.exitContentSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContentSpec" ):
                return visitor.visitContentSpec(self)
            else:
                return visitor.visitChildren(self)




    def contentSpec(self):

        localctx = XMLParser.ContentSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_contentSpec)
        try:
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.match(XMLParser.EMPTY)
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.match(XMLParser.ANY)
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 3)
                self.state = 139
                self.mixed()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MixedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(XMLParser.LPAREN, 0)

        def PCDATA(self):
            return self.getToken(XMLParser.PCDATA, 0)

        def RPAREN(self):
            return self.getToken(XMLParser.RPAREN, 0)

        def PIPE(self):
            return self.getToken(XMLParser.PIPE, 0)

        def nameList(self):
            return self.getTypedRuleContext(XMLParser.NameListContext,0)


        def ASTERISK(self):
            return self.getToken(XMLParser.ASTERISK, 0)

        def getRuleIndex(self):
            return XMLParser.RULE_mixed

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMixed" ):
                listener.enterMixed(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMixed" ):
                listener.exitMixed(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMixed" ):
                return visitor.visitMixed(self)
            else:
                return visitor.visitChildren(self)




    def mixed(self):

        localctx = XMLParser.MixedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_mixed)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,21,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.match(XMLParser.LPAREN)
                self.state = 143
                self.match(XMLParser.PCDATA)
                self.state = 144
                self.match(XMLParser.RPAREN)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.match(XMLParser.LPAREN)
                self.state = 146
                self.match(XMLParser.PCDATA)
                self.state = 147
                self.match(XMLParser.PIPE)
                self.state = 148
                self.nameList()
                self.state = 149
                self.match(XMLParser.RPAREN)
                self.state = 150
                self.match(XMLParser.ASTERISK)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Name(self, i:int=None):
            if i is None:
                return self.getTokens(XMLParser.Name)
            else:
                return self.getToken(XMLParser.Name, i)

        def PIPE(self, i:int=None):
            if i is None:
                return self.getTokens(XMLParser.PIPE)
            else:
                return self.getToken(XMLParser.PIPE, i)

        def getRuleIndex(self):
            return XMLParser.RULE_nameList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNameList" ):
                listener.enterNameList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNameList" ):
                listener.exitNameList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNameList" ):
                return visitor.visitNameList(self)
            else:
                return visitor.visitChildren(self)




    def nameList(self):

        localctx = XMLParser.NameListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_nameList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(XMLParser.Name)
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==20:
                self.state = 155
                self.match(XMLParser.PIPE)
                self.state = 156
                self.match(XMLParser.Name)
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntityDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTITY(self):
            return self.getToken(XMLParser.ENTITY, 0)

        def DTDName(self):
            return self.getToken(XMLParser.DTDName, 0)

        def DTDSTRING(self):
            return self.getToken(XMLParser.DTDSTRING, 0)

        def GT(self):
            return self.getToken(XMLParser.GT, 0)

        def DTD_WS(self, i:int=None):
            if i is None:
                return self.getTokens(XMLParser.DTD_WS)
            else:
                return self.getToken(XMLParser.DTD_WS, i)

        def PERCENT(self):
            return self.getToken(XMLParser.PERCENT, 0)

        def SYSTEM(self):
            return self.getToken(XMLParser.SYSTEM, 0)

        def getRuleIndex(self):
            return XMLParser.RULE_entityDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntityDecl" ):
                listener.enterEntityDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntityDecl" ):
                listener.exitEntityDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntityDecl" ):
                return visitor.visitEntityDecl(self)
            else:
                return visitor.visitChildren(self)




    def entityDecl(self):

        localctx = XMLParser.EntityDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_entityDecl)
        self._la = 0 # Token type
        try:
            self.state = 204
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,34,self._ctx)
            if la_ == 1:
